[tool.poetry]
name = "quendor"
version = "0.1.0"
description = "A Specification-Accurate Z-Machine Implementation"
authors = ["Jeff Nyman <quendor.app@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/jeffnyman/quendor"
keywords = ["z-machine", "interpreter", "emulator", "infocom"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Games/Entertainment",
]

[tool.poetry.scripts]
quendor = "quendor.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.4.1"
flake8 = "^6.1.0"
invoke = "^2.2.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
